Bug 456840 - messagereader: allow easy removing of contact from address book / Bug 516170 - [faceted search] need better understandability of the faceting controls (port from 1.9.1/Frederic)

--- a/fr/mail/chrome/messenger/editContactOverlay.properties
+++ b/fr/mail/chrome/messenger/editContactOverlay.properties
@@ -5,3 +5,6 @@ editDetailsLabel=Modifier les détails
 editDetailsAccessKey=M
 viewDetailsLabel=Afficher les détails
 viewDetailsAccessKey=A
+
+deleteContactTitle=Supprimer le contact
+deleteContactMessage=Êtes-vous sûr de vouloir supprimer ce contact ?
