--- a/fr/mail/chrome/messenger/gloda.properties
+++ b/fr/mail/chrome/messenger/gloda.properties
@@ -41,26 +41,66 @@
 #  refer to the objects being faceted (e.g. "Message" or "Mail").
 
 # LOCALIZATION NOTE (*.includeLabel): The label to use for the included group
-#  in the facet display.  If not provided, we will fall back to
+#  in the facet display. If not provided, we will fall back to
 #  "glodaFacetView.facets.included.fallbackLabel".
 
 # LOCALIZATION NOTE (*.excludeLabel): The label to use for the excluded group
-#  in the facet display.  If not provided, we will fall back to
+#  in the facet display. If not provided, we will fall back to
 #  "glodaFacetView.facets.excluded.fallbackLabel".
 
 # LOCALIZATION NOTE (*.remainderLabel): The label to use for the remaining items
 #  that are neither part of the included group or the excluded group in the
-#  facet display.  If not provided, we will fall back to
+#  facet display. If not provided, we will fall back to
 #  "glodaFacetView.facets.remainder.fallbackLabel".
+
+# LOCALIZATION NOTE (*.mustMatchLabel): The label to use for the popup menu
+#  to indicate that the results should be restricted to messages which match
+#  a particular value. If not provided, we will fall back to
+#  "glodaFacetView.facets.mustMatch.fallbackLabel".  #1, if present, is
+#  replaced by the value of the facet (name, folder, mailing list, etc.)
+
+# LOCALIZATION NOTE (*.cantMatchLabel): The label to use for the popup menu
+#  to indicate that the results should be restricted to messages which match
+#  a particular value. If not provided, we will fall back to
+#  "glodaFacetView.facets.cantMatch.fallbackLabel".  #1, if present, is
+#  replaced by the value of the facet (name, folder, mailing list, etc.)
+
+# LOCALIZATION NOTE (*.mayMatchLabel): The label to use for the popup menu
+#  to indicate that the results should no longer be restricted relative to
+#  this particular facet value. If not provided, we will fall back to
+#  "glodaFacetView.facets.mayMatch.fallbackLabel".  #1, if present, is
+#  replaced by the value of the facet (name, folder, mailing list, etc.)
+
+# LOCALIZATION NOTE (*.mustMatchSomeLabel): The label to use for the popup menu
+#  to indicate that the results should be restricted to messages which have
+#  _some_ value (e.g. at least one tag is set). If not provided, we will fall
+#  back to "glodaFacetView.facets.mustMatchSome.fallbackLabel".  #1, if present,
+#  is replaced by the value of the facet (name, folder, mailing list, etc.)
+
+# LOCALIZATION NOTE (*.mustMatchNoneLabel): The label to use for the popup menu
+#  to indicate that the results should be restricted to messages which have _no_
+#  value (e.g. no tags are set). If not provided, we will fall back to
+#  "glodaFacetView.facets.mustMatchNoneLabel.fallbackLabel".  #1, if present, is
+#  replaced by the value of the facet (name, folder, mailing list, etc.)
+
+# LOCALIZATION NOTE (*.mayMatchAnyLabel): The label to use for the popup menu
+#  to indicate that the results should not be restricted to messages which have
+#  any or no value (e.g. no requirements on any tags are set). If not provided,
+#  we will fall back to "glodaFacetView.facets.mayMatchAnyLabel.fallbackLabel".
+#  #1, if present, is replaced by the value of the facet (name, folder, mailing
+#  list, etc.)
 
 # LOCALIZATION NOTE (gloda.message.attr.account.*): Stores the account in which
 #  a message's folder is located.
 gloda.message.attr.account.facetNameLabel=Compte
+gloda.message.attr.account.mustMatchLabel=doit être dans #1
+gloda.message.attr.account.cantMatchLabel=ne doit pas être dans #1
 
 # LOCALIZATION NOTE (gloda.message.attr.folder.*): Stores the message folder in
 #  which the message is stored.
 gloda.message.attr.folder.facetNameLabel=Dossier Courrier
-
+gloda.message.attr.folder.mustMatchLabel=doit être dans #1
+gloda.message.attr.folder.cantMatchLabel=ne doit pas être dans #1
 # LOCALIZATION NOTE (gloda.message.attr.fromMe.*): Stores everyone involved
 #  with the message.  This means from/to/cc/bcc.
 gloda.message.attr.fromMe.facetNameLabel=De
@@ -75,6 +115,8 @@ gloda.message.attr.involves.facetNameLabel=Personne
 gloda.message.attr.involves.includeLabel=concernant quiconque parmi :
 gloda.message.attr.involves.excludeLabel=ne concernant pas :
 gloda.message.attr.involves.remainderLabel=autre participants :
+gloda.message.attr.involves.mustMatchLabel=doit concerner #1
+gloda.message.attr.involves.cantMatchLabel=ne doit pas concerner #1
 
 # LOCALIZATION NOTE (gloda.message.attr.date.*): Stores the date of the message.
 #  Thunderbird normally stores the date the message claims it was composed
@@ -96,15 +138,21 @@ gloda.message.attr.attachmentTypes.facetNameLabel=Pièces jointes
 #  the mailing list and only be detected in messages received from the mailing
 #  list.  Extensions may contribute additional detected mailing-list-like
 #  things.
-gloda.message.attr.mailing-list.facetNameLabel=Liste de diffusion concernée
-
+gloda.message.attr.mailing-list.facetNameLabel=Liste de diffusion
+gloda.message.attr.mailing-list.mustMatchLabel=doit être dans #1
+gloda.message.attr.mailing-list.cantMatchLabel=ne doit pas être dans #1
+gloda.message.attr.mailing-list.mustMatchSomeLabel=doit être dans une liste de diffusion
+gloda.message.attr.mailing-list.mustMatchNoneLabel=ne doit pas être dans une liste de diffusion
 # LOCALIZATION NOTE (gloda.message.attr.star.*): Stores the tags applied to the
 #  message.  Notably, gmail's labels are not currently exposed via IMAP and we
 #  do not do anything clever with gmail, so this is indepdendent of gmail
 #  labels.  This may change in the future, but it's a safe bet it's not
 #  happening on Thunderbird's side prior to 3.0.
 gloda.message.attr.tag.facetNameLabel=Étiquettes
-
+gloda.message.attr.tag.mustMatchLabel=doit être marqué comme #1
+gloda.message.attr.tag.cantMatchLabel=ne doit pas être marqué comme #1
+gloda.message.attr.tag.mustMatchSomeLabel=doit être marqué
+gloda.message.attr.tag.mustMatchNoneLabel=ne doit pas être marqué
 # LOCALIZATION NOTE (gloda.message.attr.tag.*): Stores whether the message is
 #  starred or not, as indicated by a pretty star icon.  In the past, the icon
 #  used to be a flag.  The IMAP terminology continues to be "flagged".
