--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -313,8 +313,6 @@ nocachedbodytitle=<TITLE>Se connecter pour voir ce message</TITLE>\n
 confirmUnsubscribeTitle=Confirmation du désabonnement
 confirmUnsubscribeText=Voulez-vous vraiment vous désabonner de %S ?
 confirmUnsubscribeManyText=Voulez-vous vraiment vous désabonner de ces groupes ?
-feedNoSummaryTitle=Aucun résumé pour le flux
-feedNoSummaryAlert=Ceci est un flux de nouvelles dans un ancien format, qui ne stocke pas les résumés de chaque nouvelle. Par conséquent, il ne peut être affiché.
 
 # msgHdrViewOverlay.js
 openLabel=Ouvrir
@@ -328,6 +326,7 @@ deleteLabelAccesskey=S
 deleteAttachments=Les pièces jointes suivantes seront définitivement supprimées du message :\n%S\nCette action ne peut être annulée. Voulez-vous vraiment continuer ?
 detachAttachments=Les pièces jointes suivantes ont été enregistrées avec succès et vont maintenant être supprimées définitivement de ce message :\n%S\nCette action ne peut être annulée. Voulez-vous vraiment continuer ?
 deleteAttachmentFailure=Échec de la suppression des pièces jointes sélectionnées.
+emptyAttachment=Cette pièce jointe est vide.\nVeuillez vérifier avec l'expéditeur.\nSouvent, les logicels pare-feu et les antivirus détruise les pièces jointes.
 
 # This is the format for prepending accesskeys to the
 # each of the attachments in the file|attachments menu:
