--- a/fr/mail/chrome/messenger/editContactOverlay.properties
+++ b/fr/mail/chrome/messenger/editContactOverlay.properties
@@ -7,4 +7,4 @@ viewDetailsLabel=Afficher les détails
 viewDetailsAccessKey=A
 
 deleteContactTitle=Supprimer le contact
-deleteContactMessage=Êtes-vous sûr de vouloir supprimer ce contact ?
+deleteContactMessage=Voulez-vous vraiment supprimer ce contact ?
