--- a/de/mail/chrome/messenger/messenger.properties
+++ b/de/mail/chrome/messenger/messenger.properties
@@ -109,7 +109,7 @@ folderRenameFailed=Der Ordner konnte nicht umbenannt werden. Eventuell wird er g
 # LOCALIZATION NOTE(verboseFolderFormat): %1$S is folder name, %2$S is server name
 verboseFolderFormat=%1$S in %2$S
 # LOCALIZATION NOTE(filterFolderTruncateFailed): %1$S is replaced by the folder name, %2$S is replaced by the brandShortName
-filterFolderTruncateFailed=Es gab einen Fehler beim Bearbeiten des Posteingangs, nachdem per Filter eine Nachricht in den Ordner "%1$S" verschoben wurde. Eventuell ist es notwendig %2$S zu beenden und die betroffene Datei 'INBOX.msf' zu löschen (sie wird anschließend automatisch neu erstellt).
+filterFolderTruncateFailed=Es gab einen Fehler beim Bearbeiten des Posteingangs, nachdem per Filter eine Nachricht in den Ordner "%1$S" verschoben wurde. Eventuell ist es notwendig %2$S zu beenden und die betroffene Datei "INBOX.msf" zu löschen (sie wird anschließend automatisch neu erstellt).
 
 mailboxTooLarge=Der Ordner %S ist voll und kann keine weiteren Nachrichten aufnehmen.\n\nUm Platz für weitere Nachrichten zu machen, löschen Sie alte Nachrichten oder legen Sie Unterordner an, in die Sie vorhandene Nachrichten verteilen. Anschließend müssen Sie den Ordner bitte komprimieren.
 errorGettingDB=Die Indexdatei zu %S kann nicht erstellt werden. Eventuell ist der vollständige Pfad zu lang oder es handelt sich um einen Schreib-/Lesefehler.
@@ -314,8 +314,6 @@ nocachedbodytitle=<TITLE>Gehen Sie Online, um diese Nachricht anzusehen</TITLE>\
 confirmUnsubscribeTitle=Abbestellen bestätigen
 confirmUnsubscribeText=Soll %S wirklich abbestellt werden?
 confirmUnsubscribeManyText=Wirklich alle gewählten Newsgruppen abbestellen?
-feedNoSummaryTitle=Keine Feed-Zusammenfassung
-feedNoSummaryAlert=Dies ist ein News-Feed in einem älteren Format, das keine Zusammenfassung der Feed-Artikel enthält. Daher kann diese nicht angezeigt werden.
 
 # msgHdrViewOverlay.js
 openLabel=Öffnen
@@ -329,6 +327,7 @@ deleteLabelAccesskey=L
 deleteAttachments=Folgende Anhänge werden endgültig von der Nachricht gelöscht:\n%S\n\nDies kann NICHT rückgängig gemacht werden. Soll trotzdem gelöscht werden?
 detachAttachments=Folgende Anhänge wurden erfolgreich gespeichert und werden nun endgültig von der Nachricht gelöscht:\n%S\n\nDies kann NICHT rückgängig gemacht werden. Soll trotzdem fortgefahren werden??
 deleteAttachmentFailure=Die gewählten Anhänge konnten nicht gelöscht werden.
+emptyAttachment=Dieser Anhang scheint keinen Inhalt zu haben.\nBitte klären Sie dies mit dem Absender.\nFirewall- oder Antivirenprogramme in Firmen sind häufig der Grund für gelöschte Anhänge.
 
 # This is the format for prepending accesskeys to the
 # each of the attachments in the file|attachments menu:
@@ -441,8 +440,8 @@ folderPaneHeader_all=Alle Ordner
 folderPaneHeader_unread=Ungelesene Ordner
 folderPaneHeader_favorite=Favoriten-Ordner
 folderPaneHeader_recent=Letzte Ordner
-folderPaneHeader_smart=Smart-Ordner
-smartAccountName=Smart-Ordner
+folderPaneHeader_smart=Gruppierte Ordner
+smartAccountName=Gruppierte Ordner
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
