--- a/de/mail/chrome/messenger/multimessageview.properties
+++ b/de/mail/chrome/messenger/multimessageview.properties
@@ -2,7 +2,7 @@
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of threads or solitary messages selected
 # example: 4 conversations
-NConversations=#1 Konversation;#1 Konversationen
+NConversations=#1 Thema;#1 Themen
 
 numMsgs=#1 Nachricht;#1 Nachrichten
 countUnread=, #1 ungelesene;, #1 ungelesene
