--- a/de/mail/chrome/messenger/quickSearch.properties
+++ b/de/mail/chrome/messenger/quickSearch.properties
@@ -1,8 +1,8 @@
-searchEverywhere.label=In allen Konten suchen
-searchSubject.label=Betreff
-searchFrom.label=Absender
-searchFromOrSubject.label=Betreff oder Absender
-searchRecipient.label=Empfänger (An oder CC)
-searchRecipientOrSubject.label=Betreff oder Empfänger (An oder CC)
-searchBody.label=Nachrichtentext
+searchSubject.label=Filtern: Betreff
+searchFrom.label=Filtern: Absender
+searchFromOrSubject.label=Filtern: Betreff oder Absender
+searchRecipient.label=Filtern: Empfänger
+searchRecipientOrSubject.label=Filtern: Betreff oder Empfänger
+searchMsgBody.label=Filtern: Nachrichtentext
 saveAsVirtualFolder.label=Als virtuellen Ordner speichern
+searchSubjectFromOrRecipient.label=Filtern: Betreff, Absender oder Empfänger
