--- a/de/mail/chrome/messenger/glodaComplete.properties
+++ b/de/mail/chrome/messenger/glodaComplete.properties
@@ -43,15 +43,10 @@ glodaComplete.messagesTagged.label=Nachrichten mit Schlagwort "#1"
 # LOCALIZATION NOTE (glodaComplete.messagesMentioning.label): The label used
 #  in the autocomplete widget to refer to a search for all messages mentioning
 #  a particular word (replacing #1).
-glodaComplete.messagesMentioning.label=Nachrichten mit Text "#1"
+glodaComplete.messagesMentioning.label=Nachrichten mit "#1"
 
-# LOCALIZATION NOTE (glodaComplete.messagesWithAny.label): The label used
+# LOCALIZATION NOTE (glodaComplete.messagesWithMany.label): The label used
 #  in the autocomplete widget to refer to a search for all messages mentioning
-#  any one of a set of words
-glodaComplete.messagesWithAny.label=Nachrichten mit mindestens einem Wort aus:
-
-# LOCALIZATION NOTE (glodaComplete.messagesWithAll.label): The label used
-#  in the autocomplete widget to refer to a search for all messages mentioning
-#  all of a set of words
-glodaComplete.messagesWithAll.label=Nachrichten mit allen diesen Wörtern:
-
+#  a set of words, or a phrase containing multiple words (e.g. "red pepper")
+#  We use the same words in en-US, but maybe that's not always true.
+glodaComplete.messagesMentioningMany.label=Nachrichten mit "#1"
