--- a/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -341,10 +341,10 @@ attachmentReminderYesIForgot=Ja, habe ich!
 attachmentReminderFalseAlarm=Nein, jetzt senden
 
 ## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
-## word $S. Place the word $S where the host name should appear.
-smtpEnterPasswordPrompt=Geben Sie Ihr Passwort für $S ein
+## word %S. Place the word %S where the host name should appear.
+smtpEnterPasswordPrompt=Geben Sie Ihr Passwort für %S ein
 ## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
 ## words %1$S and %2$S. Place the word %1$S where the host name should appear,
 ## and %2$S where the user name should appear.
-smtpEnterPasswordPromptWithUsername=Geben Sie Ihr Passwort für '%2$S' auf %1$S ein:
+smtpEnterPasswordPromptWithUsername=Geben Sie Ihr Passwort für "%2$S" auf %1$S ein:
 smtpEnterPasswordPromptTitle=SMTP-Server-Passwort benötigt
