l10n for bug 517449 - suggested string changes for search; facet search

--- a/pl/mail/chrome/messenger/glodaFacetView.properties
+++ b/pl/mail/chrome/messenger/glodaFacetView.properties
@@ -37,6 +37,7 @@
 # ***** END LICENSE BLOCK *****
 
 glodaFacetView.tab.query.label = Wyszukiwanie
+glodaFacetView.search.label    = Wyniki wyszukiwania
 
 glodaFacetView.constraints.query.fulltext.label            = Szukaj: #1
 glodaFacetView.constraints.query.fulltext.andJoinWord      = oraz
@@ -63,12 +64,12 @@ glodaFacetView.result.message.toLabel   = do:
 
 glodaFacetView.result.message.noSubject = (brak tematu)
 
-glodaFacetView.results.message.countLabel.topMessages = #1 wiadomość;#1 wiadomości;#1 wiadomości
-glodaFacetView.results.message.countLabel.outOf       = z #1 ogółem;z #1 ogółem;z #1 ogółem
-glodaFacetView.results.message.countLabel.grouping    = #1 #2
+glodaFacetView.results.header.countLabel.NMessages = #1 wiadomość;#1 wiadomości;#1 wiadomości
+glodaFacetView.results.header.countLabel.ofN       = z #1;z #1;z #1
+glodaFacetView.results.header.countLabel.grouping  = #1 #2
 
-glodaFacetView.results.message.showAllInList.label   = Wyświetl wszystkie jako listę w nowej karcie
-glodaFacetView.results.message.showAllInList.tooltip = Wyświetli listę wszystkich aktualnie wyświetlanych wiadomości w nowej karcie (obecna karta zostanie zamknięta)
+glodaFacetView.results.message.openAsList.label   = Wyświetl jako listę
+glodaFacetView.results.message.openAsList.tooltip = Wyświetli listę wszystkich aktualnie wyświetlanych wiadomości w nowej karcie (obecna karta zostanie zamknięta)
 
 glodaFacetView.results.message.sort.label     = sortowanie według:
 glodaFacetView.results.message.sort.relevance = trafność
