l10n for bug 516170 - need better understandability of the faceting controls; facet search

--- a/pl/mail/chrome/messenger/gloda.properties
+++ b/pl/mail/chrome/messenger/gloda.properties
@@ -47,6 +47,13 @@ gloda.message.attr.involves.includeLabel   = z udziałem:
 gloda.message.attr.involves.excludeLabel   = bez udziału:
 gloda.message.attr.involves.remainderLabel = inni korespondenci:
 
+gloda.message.attr.account.mustMatchLabel  = musi znajdować się w #1
+gloda.message.attr.account.cantMatchLabel  = nie może znajdować się w #1
+gloda.message.attr.folder.mustMatchLabel   = musi znajdować się w #1
+gloda.message.attr.folder.cantMatchLabel   = nie może znajdować się w #1
+gloda.message.attr.involves.mustMatchLabel = z udziałem #1
+gloda.message.attr.involves.cantMatchLabel = bez udziału #1
+
 gloda.message.attr.date.facetNameLabel            = Data
 gloda.message.attr.attachmentTypes.facetNameLabel = Załączniki
 gloda.message.attr.mailing-list.facetNameLabel    = Lista dyskusyjna
@@ -55,6 +62,15 @@ gloda.message.attr.star.facetNameLabel            = Oznaczone
 gloda.message.attr.read.facetNameLabel            = Status przeczytania
 gloda.message.attr.repliedTo.facetNameLabel       = Odpowiedziano do
 gloda.message.attr.forwarded.facetNameLabel       = Przekazano
+
+gloda.message.attr.mailing-list.mustMatchLabel    = musi pochodzić z listy #1
+gloda.message.attr.mailing-list.cantMatchLabel    = nie może pochodzić z listy #1
+gloda.message.attr.mailing-list.mustMatchSomeLabel= musi pochodzić z którejś z list
+gloda.message.attr.mailing-list.mustMatchNoneLabel= nie może pochodzić z żadnej z list
+gloda.message.attr.tag.mustMatchLabel             = musi być oznaczona etykietą #1
+gloda.message.attr.tag.cantMatchLabel             = nie może być oznaczona etykietą #1
+gloda.message.attr.tag.mustMatchSomeLabel         = musi posiadać etykietę
+gloda.message.attr.tag.mustMatchNoneLabel         = nie może posiadać etykiety
 
 gloda.mimetype.category.archives.label  = archiwa
 gloda.mimetype.category.documents.label = dokumenty
