--- a/pl/mail/chrome/messenger/glodaFacetView.properties
+++ b/pl/mail/chrome/messenger/glodaFacetView.properties
@@ -54,6 +54,14 @@ glodaFacetView.facets.included.fallbackLabel=including any of:
 glodaFacetView.facets.excluded.fallbackLabel=excluding:
 glodaFacetView.facets.remainder.fallbackLabel=other:
 
+glodaFacetView.facets.mustMatchLabel.fallbackLabel     = musi pasować do: #1
+glodaFacetView.facets.mustMatchNoneLabel.fallbackLabel = nie może zawierać:
+glodaFacetView.facets.cantMatchLabel.fallbackLabel     = nie może pasować do: #1
+glodaFacetView.facets.mustMatchSomeLabel.fallbackLabel = musi posiadać wartość
+
+glodaFacetView.facets.mayMatchLabel.fallbackLabel    = usuń ograniczenie
+glodaFacetView.facets.mayMatchAnyLabel.fallbackLabel = usuń ograniczenie
+
 # FIXME: glodaFacetView.facets.noneLabel=None
 glodaFacetView.facets.noneLabel = Nic
 
