l10n for bug 489406 - no error and no action when clicking on zero sized attachment

--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -252,6 +252,7 @@ deleteLabelAccesskey    = U
 deleteAttachments       = Następujące załączniki zostaną nieodwracalnie usunięte z tej wiadomości:\n%S\nCzynności tej nie można cofnąć. Czy kontynuować?
 detachAttachments       = Następujące załączniki zostały zapisane i zostaną nieodwracalnie usunięte z tej wiadomości:\n%S\nCzynności tej nie można cofnąć. Czy kontynuować?
 deleteAttachmentFailure = Usunięcie wybranych załączników nie powiodło się.
+emptyAttachment         = Ten załącznik wygląda na pusty.\nProszę skontaktować się z nadawcą w celu wyjaśnienia.
 
 attachmentDisplayNameFormat=%S %S
 101 = Nieznany błąd
